ipc/ipdl/test/ipdl/error/Nullable2.ipdl
//error: `nullable' qualifier for type `int' is unsupported

union Union {
    nullable int;
};

[ChildProc=any]
protocol Nullable2 {
child:
    async Msg(Union i);
};
